chore: streamline eslint configuration (#1346)
* fix(elements): fix eslint

* fix: fix global lint fix config

* fix(elements): fix linter errors

* ci: add lint:ci option to make it run silent

* fix(storybook): properly config storybook linting

* fix(ui-patterns): properly configure linting

* fix(ui-patterns-playground): properly configure linting

* fix(elements-react): properly configure linting

* chore: format fix

--- a/nx.json
+++ b/nx.json
@@ -24,7 +24,19 @@
         "^production",
         "{projectRoot}/.eslintrc.json",
         "{workspaceRoot}/.eslintrc.json"
-      ]
+      ],
+      "defaultConfiguration": "check",
+      "configurations": {
+        "check": {
+          "fix": false
+        },
+        "fix": {
+          "fix": true
+        },
+        "ci": {
+          "quiet": true
+        }
+      }
     },
     "clean": {
       "executor": "nx:run-commands",
