--- a/packages/elements/project.json
+++ b/packages/elements/project.json
@@ -43,14 +43,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "packages/elements/src/*.{ts,tsx}",
-          "packages/elements/scripts/*.{ts,tsx}",
-          "packages/elements/output-targets/*.{ts,tsx}"
-        ]
-      }
+      "outputs": ["{options.outputFile}"]
     },
     "icons": {
       "executor": "nx:run-commands",
