--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@nx/js": "18.0.7",
     "@nx/playwright": "18.0.7",
     "@nx/storybook": "18.0.7",
+    "@nx/vite": "18.0.7",
+    "@nx/web": "18.0.7",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
@@ -53,6 +55,7 @@
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
+    "@vitest/ui": "^1.3.1",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "conventional-changelog-angular": "^7.0.0",
@@ -83,6 +86,8 @@
     "svgo": "^2.8.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.2",
+    "vite": "~5.0.0",
+    "vitest": "^1.3.1",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
