--- a/packages/elements-vue-example/project.json
+++ b/packages/elements-vue-example/project.json
@@ -6,25 +6,24 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
+      "executor": "@nx/vite:build",
       "options": {
-        "cwd": "packages/elements-vue-example",
-        "command": "vite build"
+        "outputPath": "{projectRoot}/dist",
+        "configFile": "{projectRoot}/vite.config.ts"
       }
     },
     "start": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "packages/elements-vue-example"
-      },
+      "executor": "@nx/vite:dev-server",
       "defaultConfiguration": "dev",
-      "configurations": {
-        "dev": {
-          "command": "vite serve"
-        },
-        "prod": {
-          "command": "vite serve --mode=production"
-        }
+      "options": {
+        "buildTarget": "elements-vue-example:build"
+      }
+    },
+    "preview": {
+      "executor": "@nx/vite:preview-server",
+      "defaultConfiguration": "prod",
+      "options": {
+        "buildTarget": "elements-vue-example:build"
       }
     },
     "lint": {
