--- a/packages/elements-react-example/package.json
+++ b/packages/elements-react-example/package.json
@@ -15,7 +15,6 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.1.0",
-    "vite": "^4.4.9"
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
