--- a/packages/elements-react-example/project.json
+++ b/packages/elements-react-example/project.json
@@ -7,6 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
+      "outputs": ["{projectRoot}/dist"],
       "options": {
         "outputPath": "{projectRoot}/dist",
         "configFile": "{projectRoot}/vite.config.ts"
@@ -14,7 +15,6 @@
     },
     "start": {
       "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "dev",
       "options": {
         "buildTarget": "elements-react-example:build",
         "port": 4300
@@ -22,7 +22,6 @@
     },
     "preview": {
       "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "prod",
       "options": {
         "buildTarget": "elements-react-example:build",
         "port": 4300
