--- a/packages/elements-vue-example/project.json
+++ b/packages/elements-vue-example/project.json
@@ -7,6 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nx/vite:build",
+      "outputs": ["{projectRoot}/dist"],
       "options": {
         "outputPath": "{projectRoot}/dist",
         "configFile": "{projectRoot}/vite.config.ts"
@@ -14,16 +15,16 @@
     },
     "start": {
       "executor": "@nx/vite:dev-server",
-      "defaultConfiguration": "dev",
       "options": {
-        "buildTarget": "elements-vue-example:build"
+        "buildTarget": "elements-vue-example:build",
+        "port": 4400
       }
     },
     "preview": {
       "executor": "@nx/vite:preview-server",
-      "defaultConfiguration": "prod",
       "options": {
-        "buildTarget": "elements-vue-example:build"
+        "buildTarget": "elements-vue-example:build",
+        "port": 4400
       }
     },
     "lint": {
