refactor(landingpage): integrate nx executors for next.js (#1339)
Closes landingpage package in #1290

---------

Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/js": "18.0.7",
+    "@nx/next": "18.0.7",
     "@nx/playwright": "18.0.7",
     "@nx/storybook": "18.0.7",
     "@playwright/test": "^1.36.0",
@@ -78,6 +79,7 @@
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
     "semver": "^7.5.4",
+    "serve": "^14.2.1",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
@@ -94,6 +96,9 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
