refactor: integrate nx executors for vue & react example (#1357)
Partially closes #1290

---------

Co-authored-by: Jan-Niklas Voß <jan-niklas.voss@inovex.de>

--- a/nx.json
+++ b/nx.json
@@ -117,6 +117,11 @@
       "{workspaceRoot}/tsconfig.json",
       "{workspaceRoot}/tsconfig.base.json"
     ],
-    "production": ["default", "!{projectRoot}/**/*.e2e.ts"]
+    "production": [
+      "default",
+      "!{projectRoot}/**/*.e2e.ts",
+      "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
+      "!{projectRoot}/tsconfig.spec.json"
+    ]
   }
 }
