--- a/packages/ui-patterns-playground/project.json
+++ b/packages/ui-patterns-playground/project.json
@@ -6,26 +6,17 @@
   "tags": [],
   "targets": {
     "build": {
-      "executor": "nx:run-commands",
-      "outputs": ["{projectRoot}/dist"],
+      "executor": "@nx/vite:build",
       "options": {
-        "cwd": "packages/ui-patterns-playground",
-        "commands": ["vite build"]
+        "outputPath": "{projectRoot}/dist",
+        "configFile": "{projectRoot}/vite.config.ts"
       }
     },
-    "start": {
-      "executor": "nx:run-commands",
+    "serve": {
+      "executor": "@nx/vite:dev-server",
       "options": {
-        "cwd": "packages/ui-patterns-playground"
-      },
-      "defaultConfiguration": "dev",
-      "configurations": {
-        "dev": {
-          "command": "vite --port 4500"
-        },
-        "prod": {
-          "command": "vite preview --port 4500"
-        }
+        "buildTarget": "ui-patterns-playground:build",
+        "port": 4500
       }
     },
     "lint": {
