--- a/package.json
+++ b/package.json
@@ -52,9 +52,15 @@
     "@types/css-font-loading-module": "^0.0.7",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "29.5.11",
+    "@types/node": "18.16.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "6.13.2",
     "@typescript-eslint/parser": "6.13.2",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
+    "autoprefixer": "^10.4.16",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
     "conventional-changelog-angular": "^7.0.0",
@@ -62,10 +68,14 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "fs-extra": "^9.0.0",
     "jest": "29.7.0",
     "jest-cli": "29.7.0",
@@ -79,13 +89,20 @@
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "prompts": "^2.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.55.0",
     "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
     "svgo": "^2.8.0",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
+    "vite-plugin-dts": "^3.6.0",
+    "vite-plugin-static-copy": "^0.17.0",
+    "vitest": "^1.3.1",
     "yalc": "^1.0.0-pre.32"
   },
   "dependencies": {
