ci: deploy action exiting with status code 128

--- a/.github/workflows/deploy-landingpage.yml
+++ b/.github/workflows/deploy-landingpage.yml
@@ -39,7 +39,7 @@ jobs:
           path: ./artifact
 
       - name: Deploy to Github Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.7
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: pages # The branch the action should deploy to.
           folder: ./artifact # The folder the action should deploy.
