--- a/.github/workflows/deploy-example-projects.yml
+++ b/.github/workflows/deploy-example-projects.yml
@@ -23,7 +23,7 @@ jobs:
           example-artifacts-base-path: example-artifacts
 
       - name: Deploy Example Projects to Github Pages 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.7
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: pages # The branch the action should deploy to.
           commit-message: Deploying example projects
