--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/js": "18.0.7",
+    "@nx/next": "18.0.7",
     "@nx/playwright": "18.0.7",
     "@nx/storybook": "18.0.7",
     "@nx/vite": "18.0.7",
@@ -67,6 +68,7 @@
     "conventional-recommended-bump": "^9.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.51.0",
+    "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -83,7 +85,7 @@
     "lint-staged": "^10.5.3",
     "ng-packagr": "~15.1.0",
     "nx": "18.0.7",
-    "postcss": "^8.4.5",
+    "postcss": "8.4.21",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
@@ -91,7 +93,7 @@
     "prompts": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.55.0",
+    "sass": "1.62.1",
     "semver": "^7.5.4",
     "shelljs": "^0.8.4",
     "shx": "^0.3.2",
@@ -114,6 +116,7 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "next": "14.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
