start pattern demo

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:storybook": "nx run-many --target=start --projects=storybook,elements --output-style=stream",
     "start:landingpage": "nx run landingpage:start",
     "start:ui-patterns-playground": "nx run-many --target=start --projects=ui-patterns,ui-patterns-playground --output-style=stream",
+    "start:meetup": "nx run-many --target=start --projects=ui-patterns,meetup,landingpage --output-style=stream",
     "build": "nx run-many --target=build --output-style=stream",
     "test": "nx run-many --target=test --output-style=stream --configuration=ci",
     "test:core:watch": "nx run elements:test:watch",
