--- a/packages/meetup/project.json
+++ b/packages/meetup/project.json
@@ -18,7 +18,7 @@
         "production": {}
       }
     },
-    "serve": {
+    "start": {
       "executor": "@nx/next:server",
       "defaultConfiguration": "development",
       "options": {
