chore: make core dependencies explicit to prepare for pnpm

--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -28,6 +28,19 @@
     "Tobias Heim Galindo <tobias.heim-galindo@inovex.de>",
     "Viet Duc Mai <viet.mai@inovex.de>"
   ],
+  "scripts": {
+    "build": "stencil build",
+    "start": "stencil build --watch --ci",
+    "test": "stencil test --e2e --spec --no-build",
+    "test:spec": "stencil test --spec",
+    "test:e2e": "stencil test --e2e",
+    "test:watch": "stencil test --spec --e2e --watch",
+    "lint": "eslint src --ext .ts,.tsx --fix-dry-run",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint:ci": "eslint src --ext .ts,.tsx",
+    "icons": "ts-node --project tsconfig.json scripts/integrateIcons.ts",
+    "icons:optimize": "svgo -f src/assets/ino-icon --config svgo.config.js"
+  },
   "homepage": "https://elements.inovex.de",
   "bugs": {
     "url": "https://github.com/inovex/elements/issues"
@@ -52,14 +65,17 @@
     "@material/chips": "^13.0.0",
     "@material/data-table": "^13.0.0",
     "@material/dialog": "^13.0.0",
+    "@material/dom": "^13.0.0",
     "@material/drawer": "^13.0.0",
     "@material/fab": "^13.0.0",
+    "@material/floating-label": "^13.0.0",
     "@material/form-field": "^13.0.0",
     "@material/icon-button": "^13.0.0",
     "@material/image-list": "^13.0.0",
     "@material/linear-progress": "^13.0.0",
     "@material/list": "^13.0.0",
     "@material/menu": "^13.0.0",
+    "@material/notched-outline": "^13.0.0",
     "@material/radio": "^13.0.0",
     "@material/ripple": "^13.0.0",
     "@material/select": "^13.0.0",
@@ -71,16 +87,26 @@
     "@material/tab-indicator": "^13.0.0",
     "@material/tab-scroller": "^13.0.0",
     "@material/textfield": "^13.0.0",
-    "@material/notched-outline": "^13.0.0",
+    "@material/theme": "^13.0.0",
     "@material/typography": "^13.0.0",
-    "@stencil/core": "^4.12.2",
+    "@stencil/core": "4.12.6",
     "@tarekraafat/autocomplete.js": "^10.2.7",
-    "@tiptap/core": "^2.0.0-beta.220",
-    "@tiptap/extension-link": "^2.0.0-beta.220",
-    "@tiptap/extension-task-item": "^2.0.0-beta.220",
-    "@tiptap/extension-task-list": "^2.0.0-beta.220",
-    "@tiptap/starter-kit": "^2.0.0-beta.220",
-    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/core": "2.1.0",
+    "@tiptap/extension-link": "2.1.0",
+    "@tiptap/extension-blockquote": "2.1.0",
+    "@tiptap/extension-bold": "2.1.0",
+    "@tiptap/extension-bullet-list": "2.1.0",
+    "@tiptap/extension-code": "2.1.0",
+    "@tiptap/extension-code-block": "2.1.0",
+    "@tiptap/extension-hard-break": "2.1.0",
+    "@tiptap/extension-heading": "2.1.0",
+    "@tiptap/extension-horizontal-rule": "2.1.0",
+    "@tiptap/extension-italic": "2.1.0",
+    "@tiptap/extension-task-item": "2.1.0",
+    "@tiptap/extension-task-list": "2.1.0",
+    "@tiptap/extension-text": "2.1.0",
+    "@tiptap/starter-kit": "2.1.0",
+    "@tiptap/pm": "2.1.0",
     "autosize": "^4.0.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.16.1",
