--- a/packages/elements-react-example/package.json
+++ b/packages/elements-react-example/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@inovex.de/elements-react": "^9.3.1",
+    "@inovex.de/elements-react": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
