--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -92,7 +92,6 @@
     "@stencil/core": "4.12.6",
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "@tiptap/core": "2.1.0",
-    "@tiptap/extension-link": "2.1.0",
     "@tiptap/extension-blockquote": "2.1.0",
     "@tiptap/extension-bold": "2.1.0",
     "@tiptap/extension-bullet-list": "2.1.0",
@@ -102,11 +101,16 @@
     "@tiptap/extension-heading": "2.1.0",
     "@tiptap/extension-horizontal-rule": "2.1.0",
     "@tiptap/extension-italic": "2.1.0",
+    "@tiptap/extension-link": "2.1.0",
+    "@tiptap/extension-list-item": "2.1.0",
+    "@tiptap/extension-ordered-list": "2.1.0",
+    "@tiptap/extension-paragraph": "2.1.0",
+    "@tiptap/extension-strike": "2.1.0",
     "@tiptap/extension-task-item": "2.1.0",
     "@tiptap/extension-task-list": "2.1.0",
     "@tiptap/extension-text": "2.1.0",
-    "@tiptap/starter-kit": "2.1.0",
     "@tiptap/pm": "2.1.0",
+    "@tiptap/starter-kit": "2.1.0",
     "autosize": "^4.0.4",
     "classnames": "^2.3.2",
     "date-fns": "^2.16.1",
@@ -114,8 +118,8 @@
     "tippy.js": "^6.2.3"
   },
   "devDependencies": {
-    "@stencil/angular-output-target": "^0.8.3",
     "@stencil-community/eslint-plugin": "^0.7.2",
+    "@stencil/angular-output-target": "^0.8.3",
     "@stencil/react-output-target": "^0.5.3",
     "@stencil/sass": "^3.0.8",
     "@stencil/vue-output-target": "^0.8.7",
