--- a/.github/workflows/deploy-landingpage.yml
+++ b/.github/workflows/deploy-landingpage.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/dependencies-install
       - name: Build landingpage ⚒️
-        run: yarn nx run landingpage:build
+        run: pnpm nx run landingpage:build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
