--- a/.github/workflows/deploy-release.yml
+++ b/.github/workflows/deploy-release.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           node-version-file: '.nvmrc'
           registry-url: https://registry.npmjs.org
-          scope: '@inovex.de' # important for yarn
+          scope: '@inovex.de'
           always-auth: true
       - uses: ./.github/workflows/dependencies-install
       - name: Setup Git
@@ -53,12 +53,12 @@ jobs:
       - name: Set npm loglevel
         run: npm config set loglevel ${{ inputs.loglevel }}
       - name: Build libs
-        run: yarn run nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
+        run: pnpm nx run-many -t build -p elements,elements-angular,elements-react,elements-vue
         env:
           NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Version and Release
         shell: bash
-        run: yarn nx run workspace:publish:${{ inputs.configuration }}
+        run: pnpm nx run workspace:publish:${{ inputs.configuration }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
