--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/dependencies-install
       - name: Build Storybook
-        run: yarn nx run storybook:build
+        run: pnpm nx run storybook:build
         env:
           NX_REJECT_UNKNOWN_LOCAL_CACHE: 0
       - name: Upload Storybook artifact ⬆️
