--- a/packages/elements-angular-example/project.json
+++ b/packages/elements-angular-example/project.json
@@ -71,7 +71,10 @@
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/elements-angular-example/**/*.ts", "packages/elements-angular-example/**/*.html"]
+        "lintFilePatterns": [
+          "packages/elements-angular-example/src/**/*.ts",
+          "packages/elements-angular-example/src/**/*.html"
+        ]
       }
     },
     "clean": {}
