--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -39,7 +39,7 @@
     "dist/"
   ],
   "dependencies": {
-    "@inovex.de/elements": "^9.3.1",
+    "@inovex.de/elements": "workspace:*",
     "lit": "^3.1.0",
     "lodash-es": "^4.17.21",
     "moment": "^2.24.0",
